<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E17EB"
    tools:context=".CrearUsuarioActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/welcomeText"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcomeTitle"
                android:textAlignment="center"
                android:textColor="#5722B5"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/NombreyApellido"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@android:drawable/editbox_background"
                android:drawablePadding="8dp"
                android:hint="@string/nombreyapellido"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/editbox_background"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/PasswordRegistro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/editbox_background"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/RegisterButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:onClick="enviarDatosFirestore"
                android:text="@string/registro"
                android:textSize="20sp"
                android:typeface="normal"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/CargarButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:onClick="CargarLista"
                android:text="@string/cargarDatos"
                android:textSize="20sp"
                android:typeface="normal"
                app:cornerRadius="20dp" />
            <ListView
                android:id="@+id/datos"
                android:layout_width="match_parent"
                android:layout_height="199dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>